add defaul load profile + restructure
